@@ -1,9 +1,12 @@
 #ifndef _CONFIG_H
 #define _CONFIG_H
 
+#define CANTATA_MAKE_VERSION(a, b, c) (((a) << 16) | ((b) << 8) | (c))
+
 #define PACKAGE_NAME  "@PROJECT_NAME@"
-#define PACKAGE_VERSION "@CANTATA_VERSION_FULL@"
-#define PACKAGE_STRING  PACKAGE_NAME" "PACKAGE_VERSION
+#define PACKAGE_VERSION CANTATA_MAKE_VERSION(@CPACK_PACKAGE_VERSION_MAJOR@, @CPACK_PACKAGE_VERSION_MINOR@, @CPACK_PACKAGE_VERSION_PATCH@)
+#define PACKAGE_STRING  PACKAGE_NAME" @CANTATA_VERSION_FULL@"
+#define PACKAGE_VERSION_STRING "@CANTATA_VERSION_FULL@"
 #define INSTALL_PREFIX "@CMAKE_INSTALL_PREFIX@"
 
 #cmakedefine ENABLE_DEVICES_SUPPORT 1
